# DistFuzz

./: .clang-format  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  FOUND_BUGS.md  FOUND_BUGS.txt  INSTALL.md  LICENSE  README.md  build.sh  build_and_test.sh  build_dist.sh  build_dist_dynamic.sh  build_dist_static.sh  convert_plotdata.py  gdb  install_deps.sh  install_deps_for_kylin.sh
aerospike_test/: CMakeLists.txt  report.md
aerospike_test/include/: aerospike_client.hpp  aerospike_configuration_generator.hpp
aerospike_test/src/: node_manager.cpp
aerospike_test/src/example_client/: example_client.cpp  test_client.cpp
aerospike_test/src/operators/: aerospike_client.cpp  kill_by_name.cpp
aerospike_test/test/: test_client.cpp
aerospike_test/tests/: CMakeLists.txt  test_configuration_generator.cpp  test_operators.cpp
braft_test/: CMakeLists.txt  report.md
braft_test/include/: braft_test_common.hpp
braft_test/src/: braft_net_latency.cpp  braft_operators.cpp  braft_test_main.cpp  node_manager.cpp
braft_test/src/operators/: atomic_test.cpp  kill_by_name.cpp  start_by_name.cpp
braft_test/start-up_test/: test.sh
braft_test/test/: operator_test.cpp
braft_test/tests/: CMakeLists.txt  test_configuration_generator.cpp  test_operators.cpp
c-raft_test/: CMakeLists.txt  report.md
c-raft_test/include/: craft_configuration_generator.hpp  craft_node_manager.hpp
c-raft_test/src/: node_manager.cpp
c-raft_test/src/operators/: craft_random_grace_kill.cpp  kill_by_name.cpp  sleep_operator.cpp  start_by_name.cpp
c-raft_test/tests/: CMakeLists.txt  test_configuration_generator.cpp  test_operators.cpp
clickhouse_test/: CMakeLists.txt  readme.md  report.md
clickhouse_test/include/: keeper_configuration_generator.hpp
clickhouse_test/src/: clickhouse_common_operator.hpp  node_manager.cpp
clickhouse_test/src/keeper_operators/: delete_data_folder.cpp  keeper_client_test.cpp  kill_by_name.cpp  start_by_name.cpp
clickhouse_test/src/old/: clickhouse_common_operator.hpp  delete_data_folder.cpp
clickhouse_test/src/operators/: clickhouse_normal.cpp  kill_by_name.cpp
clickhouse_test/tests/: CMakeLists.txt  test_configuration_generator.cpp  test_operators.cpp
core/: CMakeLists.txt
core/include/: default_operator.hpp  dst_configuration_generator.hpp  dst_default_operator.hpp  dst_event.h  dst_event.hpp  dst_event_control.hpp  dst_fuzz_constant.h  dst_kv_store.h  dst_log.hpp  dst_node_manager.hpp  dst_operator.hpp  dst_operator_registry.hpp  dst_random.h  dst_registry.hpp  event.hpp  event_control.hpp  operator.hpp  operator_registry.hpp
core/include/operator/: dst_default_client_operator.hpp  dst_default_init_operator.hpp  dst_default_operator.hpp  dst_kill_by_name_operator.hpp  dst_operator.hpp  dst_random_kill_operator.hpp  dst_random_start_operator.hpp  dst_start_new_node.hpp  (+1 more)
core/src/: default_dst_random.c  default_event.cpp  default_operator.cpp  dst_default_event.cpp  dst_default_in_memory_kv_store.cpp  dst_default_operator.cpp  dst_default_random.c  dst_test_main.cpp  event.cpp  restart_operator.cpp
core/test/: dst_operator_test.cpp  dst_test_diff.cpp  dst_test_kv.cpp  dst_test_node_manager.cpp  test_kv.cpp
dqlite_test/: CMakeLists.txt
dqlite_test/include/: dqlite_configuration_generator.hpp  dqlite_node_manager.hpp
dqlite_test/src/: node_manager.cpp
etcd_test/: CMakeLists.txt  report.md
etcd_test-3517/tests/: CMakeLists.txt  test_configuration_generator.cpp
etcd_test/include/: etcd_configuration_generator.hpp
etcd_test/tests/: CMakeLists.txt  test_configuration_generator.cpp  test_operators.cpp
event_control/: CMakeLists.txt
event_control/src/: main.cpp
fuzz/: CMakeLists.txt  todo.md
fuzz/cmake/: Findlicensecc.cmake
fuzz/compiler/: compiler.cpp
fuzz/coverage_collector/: coverage_collector.c
fuzz/dst_program_controller/: main.cpp
fuzz/fuzzer/: fuzzer.cpp
fuzz/include/: constants.h  instrumentor.hpp  log.hpp
fuzz/instrumentor/: default_instrumentor.cpp  process_concurrent_coverage_instrumentor.cpp  process_function_sequence_instrumentor.cpp  process_tick_instrumentor.cpp
fuzz/instrumentor_lib/: default_instrument_lib.c
fuzz/test/: run_test.sh  test-config.json  test.cpp  test.s  test_compile_assembly.sh  test_compile_multiple_sources.sh  test_compile_single_source_no_output_name.sh  test_compile_single_source_only_compile.sh  test_compile_single_source_only_compile_with_output_name.sh  test_compile_single_source_only_link.sh  test_compile_with_default_instrumentor.sh  test_lib.cpp  test_with_lib.cpp
general_test/: CMakeLists.txt
general_test/include/: general_configuration_generator.hpp
general_test/src/: node_manager.cpp
general_test/tests/: CMakeLists.txt  test_configuration_generator.cpp  test_operators.cpp
hdfs_test/: CMakeLists.txt  report.md
hdfs_test/include/: hdfs_configuration_generator.hpp
hdfs_test/src/: node_manager.cpp
nuraft_test/: CMakeLists.txt  report.md
nuraft_test/include/: nuraft_configuration_generator.hpp
nuraft_test/src/: node_manager.cpp
nuraft_test/tests/: CMakeLists.txt  test_configuration_generator.cpp  test_operators.cpp
raftis_test/: CMakeLists.txt  report.md
redisraft_test/tests/: CMakeLists.txt  test_configuration_generator.cpp  test_operators.cpp
rethinkdb_test/: CMakeLists.txt  report.md
rethinkdb_test/client/: .project  build.sh  pom.xml
rethinkdb_test/include/: rethinkdb_configuration_generator.hpp
rethinkdb_test/src/: node_manager.cpp
rethinkdb_test/tests/: CMakeLists.txt  test_configuration_generator.cpp  test_operators.cpp
test/: CMakeLists.txt  config.json  test.cpp  test_bpf.c  test_get_fd_type.cpp  test_network_delay.sh  test_network_delay_client.cpp  test_network_delay_server.cpp  test_preload.cpp
test/bpf/: block_open.bpf.c  compiler.h  test_open.c  uprobe.bpf.c  vmlinux.h
zookeeper_test/: CMakeLists.txt  report.md
zookeeper_test/include/: zookeeper_configuration_generator.hpp
zookeeper_test/src/: node_manager.cpp
zookeeper_test/tests/: CMakeLists.txt  test_configuration_generator.cpp  test_operators.cpp
(+105 files in other folders)
